--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -24,7 +24,7 @@
             android:padding="5dp"
             android:text="@string/about_text"
             android:textColor="@android:color/black"
-            android:textColorLink="@android:color/holo_purple"
+            android:textColorLink="@android:color/holo_blue_dark"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
