--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/screenshot"
+    app:layout_constraintHorizontal_chainStyle="spread"
     tools:context=".MenuActivity">
 
     <ImageView
@@ -19,12 +20,29 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/title_logo" />
 
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/googleSignIn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/signOut"
+        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        android:text="@string/sign_out"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/playButton"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:paddingBottom="20sp"
         android:paddingLeft="50sp"
@@ -33,16 +51,17 @@
         android:text="@string/main_play"
         android:textSize="28sp"
         app:layout_constraintEnd_toStartOf="@+id/aboutButton"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintHorizontal_bias="0.33"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
         android:id="@+id/aboutButton"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="182dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:paddingBottom="20sp"
         android:paddingLeft="32sp"
@@ -50,9 +69,28 @@
         android:paddingTop="20sp"
         android:text="@string/main_about"
         android:textSize="28sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.33"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toEndOf="@+id/playButton"
+        app:layout_constraintEnd_toStartOf="@+id/highscoreButton"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <Button
+        android:id="@+id/highscoreButton"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:paddingBottom="20sp"
+        android:paddingLeft="32sp"
+        android:paddingRight="32sp"
+        android:paddingTop="20sp"
+        android:text="@string/main_highscore"
+        android:textSize="28sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/aboutButton"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <com.google.android.gms.ads.AdView
