--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -31,7 +31,6 @@
         style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:elevation="2dp"
         android:text="@string/sign_out"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent" />
@@ -41,38 +40,15 @@
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="2dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:paddingBottom="20sp"
-        android:paddingLeft="40sp"
-        android:paddingRight="40sp"
-        android:paddingTop="20sp"
+        android:background="@color/colorAccent"
+        android:paddingBottom="20dp"
+        android:paddingLeft="60dp"
+        android:paddingRight="60dp"
+        android:paddingTop="20dp"
         android:text="@string/main_play"
         android:textSize="28sp"
-        app:layout_constraintEnd_toStartOf="@+id/aboutButton"
-        app:layout_constraintHorizontal_bias="0.33"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <Button
-        android:id="@+id/aboutButton"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:paddingBottom="20sp"
-        android:paddingLeft="32sp"
-        android:paddingRight="32sp"
-        android:paddingTop="20sp"
-        android:text="@string/main_about"
-        android:textSize="28sp"
-        app:layout_constraintHorizontal_bias="0.33"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintStart_toEndOf="@+id/playButton"
-        app:layout_constraintEnd_toStartOf="@+id/highscoreButton"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
@@ -80,18 +56,32 @@
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:paddingBottom="20sp"
-        android:paddingLeft="24sp"
-        android:paddingRight="24sp"
-        android:paddingTop="20sp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="5dp"
         android:text="@string/main_highscore"
         android:textSize="28sp"
+        app:layout_constraintEnd_toStartOf="@+id/aboutButton"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/playButton" />
+
+    <Button
+        android:id="@+id/aboutButton"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="5dp"
+        android:paddingLeft="32dp"
+        android:paddingRight="32dp"
+        android:paddingTop="5dp"
+        android:text="@string/main_about"
+        android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/aboutButton"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toEndOf="@+id/highscoreButton"
+        app:layout_constraintTop_toBottomOf="@+id/playButton" />
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
